--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Vaudeville Mews Archive</title>
-<!--  <base href="/vaudeville-mews-archive/">-->
-  <base href="/">
+  <base href="/vaudeville-mews-archive/">
+<!--  <base href="/">-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
